# python-sdk

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  integration.yml  publish.yml
src/voicetel/: __init__.py  _http.py  auth.py  client.py  exceptions.py  models.py
src/voicetel/models/: __init__.py  _base.py  account.py  acl.py  authentication.py  common.py  e911.py  gateways.py  inumbering.py  lookups.py  messaging.py  numbers.py  support.py
src/voicetel/resources/: __init__.py  _base.py  account.py  acl.py  authentication.py  e911.py  gateways.py  inumbering.py  lookups.py  messaging.py  numbers.py  support.py
tests/: conftest.py
tests/integration/: conftest.py  test_readonly.py
tests/unit/: test_auth.py  test_exceptions.py  test_http.py  test_http_async.py  test_models.py  test_resources.py
