[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "voicetel-api"
version = "2.2.8"
description = "Official Python SDK for the VoiceTel REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VoiceTel", email = "support@voicetel.com" }]
keywords = ["voicetel", "telephony", "sip", "sms", "e911", "voip"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/voicetel/python-sdk"
Documentation = "https://api.voicetel.com/doc/"
Repository = "https://github.com/voicetel/python-sdk"
Issues = "https://github.com/voicetel/python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voicetel"]

[tool.hatch.build.targets.sdist]
include = ["src/voicetel", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the live api.voicetel.com (requires VOICETEL_USERNAME and VOICETEL_PASSWORD env vars)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/voicetel"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/voicetel"]
